fixed spacing issue with search

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
   padding: 0.5em;
   border-radius: 5px;
   margin-top: 1.5em;
+  margin-bottom: 1em;
   width: 50%;
   font-size: 1.2em;
 }
@@ -11,12 +12,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
-img {
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+.small-image {
+  margin: 1em;
   width: 245px;
 }
 
@@ -39,11 +39,6 @@ img {
   #pic-search {
     margin-bottom: 1em;
   }
-
-  img {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-  }
 }
 
 @media (min-width: 768px) {
@@ -52,9 +47,7 @@ img {
     font-size: 1.25em;
   }
 
-  img {
-    margin-top: 1em;
-    margin-bottom: 1em;
+  .small-image {
     width: 200px;
   }
 }
